# personal-website

./: .gitignore  .pre-commit-config.yaml  CONTENT.md  DESIGN.md  index.html  index2.html  pyproject.toml  rxconfig.py
.claude/: settings.local.json
assets/: site.js  styles.css
personal_website/: __init__.py  personal_website.py
personal_website/components/: __init__.py  about.py  contact.py  cta.py  footer.py  hero.py  nav.py  til.py  work.py
personal_website/pages/: __init__.py  index.py
