[project]
name = "personal-website"
version = "0.1.0"
description = "Personal portfolio website for Dennis Bakhuis — built with Reflex"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "reflex>=0.8.7",
]

[dependency-groups]
dev = [
    "mypy>=1.19.0",
    "pre-commit>=4.5.0",
    "ruff>=0.14.0",
]

[tool.ruff]
target-version = "py313"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
pretty = true

[[tool.mypy.overrides]]
module = ["reflex.*"]
ignore_missing_imports = true
